# adwaita-bluetooth

./: .gitignore  .gitlab-ci.yml  PKGBUILD  README.md  com.ezratweaver.AdwBluetooth.json  flake.nix  main.py  meson.build  meson_build_steps.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json
build-aux/flatpak/: com.eweaver.adw_bluetooth.json
data/: com.eweaver.AdwBluetooth.data.gresource.xml  com.eweaver.AdwBluetooth.gschema.xml  com.eweaver.adw_bluetooth.data.gresource.xml  com.eweaver.adw_bluetooth.desktop.in  com.eweaver.adw_bluetooth.gschema.xml  com.eweaver.adw_bluetooth.metainfo.xml.in  com.ezratweaver.AdwBluetooth.data.gresource.xml  com.ezratweaver.AdwBluetooth.desktop.in  com.ezratweaver.AdwBluetooth.gschema.xml  meson.build  style.css  window.blp  window.ui
data/icons/: meson.build
data/styles/: style.css
data/ui/: application-window.blp  device-details-modal.blp  device-details.blp  file-transfer-progress.blp  pin-confirmation.blp  window.blp
gi-types/: gst-1.0.d.ts  gstaudio-1.0.d.ts  gstnet-1.0.d.ts  gstvideo-1.0.d.ts
po/: POTFILES.in  meson.build
src/: application-window.ts  bluetooth.ts  com.eweaver.AdwBluetooth.src.gresource.xml  com.eweaver.adw_bluetooth.src.gresource.xml  com.ezratweaver.AdwBluetooth.src.gresource.xml  device-details-modal.ts  device-details-window.ts  file-transfer-progress-dialog.ts  gsettings.ts  main.ts  meson.build  pin-confirmation-dialog.ts  window.ts
src/adw_bluetooth/: main.py  window.py
src/bluetooth/: adapter.ts  agent.ts  bluetooth.ts  device-metadata.ts  device.ts  obex.ts
